# kvoicecontrol

./: AUTHORS  CMakeLists.txt  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  kvoicecontrol.lsm  makechangelog  missing
src/: CMakeLists.txt  Makefile.am  Makefile.in  buffer.cpp  buffer.h  buffer.moc  commands.txt  docking.cpp  docking.h  docking.moc  kvoicecontrol.cpp  kvoicecontrol.h  kvoicecontrol.kdelnk  kvoicecontrol.moc  options.cpp  options.h  options.moc  optionsdata.cpp  optionsdata.h  optionsdata.moc  preprocessing.cpp  preprocessing.h  preprocessing.moc  qtpamainloop.cpp  qtpamainloop.h  realfftf.c  realfftf.h  reference.cpp  reference.h  reference.moc  reference_editor.cpp  reference_editor.h  reference_editor.moc  score.cpp  score.h  score.moc  soundcard.cpp  soundcard.h  soundcard.moc  speakermodel.cpp  (+8 more)
src/RCS/: buffer.cpp,v  buffer.h,v  calibrate.h,v  docking.cpp,v  docking.h,v  kvoicecontrol.cpp,v  kvoicecontrol.h,v  options.cpp,v  options.h,v  preprocessing.cpp,v  preprocessing.h,v  realfftf.c,v  realfftf.h,v  reference.cpp,v  reference.h,v  reference_editor.cpp,v  reference_editor.h,v  score.cpp,v  score.h,v  soundcard.cpp,v  soundcard.h,v  speakermodel.cpp,v  speakermodel.h,v  train_dialog.cpp,v  train_dialog.h,v  utterance.cpp,v  utterance.h,v
src/doc/: Makefile.in
src/doc/en/: Makefile.am  Makefile.in  kvoicecontrol.html
