# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir
AC_CANONICAL_SYSTEM 
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(kvoicecontrol, 0.17) dnl searches for some needed programs

dnl make $KDEDIR the default for the installation
AC_PREFIX_DEFAULT(${KDEDIR:-/usr/local/kde})

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS

dnl Checks if we want to use insure++ to debug
KDE_CHECK_INSURE

# the following is to allow programs, that are known to 
# have problems when compiled with -O2
if test -n "$CXXFLAGS"; then
  safe_IFS=$IFS
  IFS=" "
  NOOPT_CXXFLAGS=""
  for i in $CXXFLAGS; do
    if test "$i" = "-O2"; then
      i=""
    fi
    NOOPT_CXXFLAGS="$NOOPT_CXXFLAGS $i"
  done
  IFS=$safe_IFS
fi
AC_SUBST(NOOPT_CXXFLAGS)
AM_DISABLE_LIBRARIES
KDE_PROG_LIBTOOL

AC_PROG_YACC

dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS
AC_PATH_KDE

dnl Checks for header files.
AC_LANG_CPLUSPLUS
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/soundcard.h)
AC_HEADER_TIME

dnl check if the compiler has bool
AC_CHECK_BOOL
AC_LANG_C
AC_C_LONG_DOUBLE
AC_TYPE_GETGROUPS

dnl Checks for library functions.
AC_CHECK_FUNCS(socket strdup vsnprintf)
AC_CHECK_SETENV
AC_CHECK_GETDOMAINNAME
AC_CHECK_GETHOSTNAME
AC_CHECK_USLEEP

dnl output files
topdir=`pwd`
AC_SUBST(topdir)

dnl Perform program name transformation
AC_ARG_PROGRAM

AC_OUTPUT(Makefile src/Makefile src/doc/Makefile src/doc/en/Makefile)
